@@ -151,7 +151,7 @@ gdb_value_struct_elt (struct ui_out *uiout, struct value **result,
 {
   volatile struct gdb_exception except;
 
-  TRY_CATCH (except, RETURN_MASK_ALL)
+  TRY_CATCH (except, RETURN_MASK_ERROR)
     {
       *result = value_struct_elt (argp, args, name, static_memfuncp, err);
     }
